added new FUS meta figures

--- a/Bibliography/thesis_references.bib
+++ b/Bibliography/thesis_references.bib
@@ -1432,6 +1432,57 @@ year = {2016}
 	volume = {15},
 	year = {2014}
 }
+
+@article{Raefski2005,
+	abstract = {Complete or partial monosomy with respect to the X chromosome is the genetic basis of Turner syndrome in human females. Individuals with Turner syndrome have a spectrum of anatomical, physiological and behavioral phenotypes with expressivity dependent on the extent of monosomy and the parental origin of the single X 1 . Parent-of-origin influences on social cognition in Turner syndrome might be due to the presence of imprinted genes on the X 2 . Imprinting of X-linked genes has also been implicated in the male prevalence of autistic spectrum disorders 3 , in male sexual orientation 4,5 and in the developmental delay of XO mouse embryos 6–8 . The only molecular evidence for X-chromosome imprinting, however, concerns X-chromosome inactivation in specific circumstances 9,10 and does not account for these phenotypes. Using a mouse model for Turner syndrome, we searched for locus-specific imprinting of X-linked genes in developing brain. We identified a cluster of X-linked genes containing at least three genes that show transcriptional repression of paternal alleles. Imprinting of these three genes, Xlr3b, Xlr4b and Xlr4c, is independent of X-chromosome inactivation and has a dynamic and complex pattern of tissue and stage specificity. Virtually all of the more than 70 imprinted genes thus far identified in mammals, with one notable exception, are autosomally linked 11 . The exception is Xist, the key effector of X-chromosome dosage compen-sation in mammals. In mice, maternal X-specific expression of Tsix, the antisense form of Xist, in trophectodermal tissues impels paternal X-specific expression of Xist, inactivating the paternal X chromo-some 12 . Thus, X-linked genes that are active in mouse trophectoderm and subject to X inactivation, Esx1 for instance 13 , have maternal-specific expression, but these genes are not imprinted per se. Inactiva-tion of genes on the paternal X in marsupials also seems to be a chromosomal effect and not locus-specific 14 . Locus-specific imprint-ing of X-linked genes, apart from Xist, has not previously been shown in mammals to our knowledge. Because imprinting is manifested most plainly at the level of transcription, we used comparative transcrip-tome analysis to identify X-linked imprinted genes in a mouse model for Turner syndrome. In consideration of Turner syndrome–associated cognitive impairment in human females, we compared transcriptomes from neonatal brain from karyotypically normal mice (40,XX and 40,XY) and Turner syndrome–like mice (39,X m and 39,X p). Two mutant strains of Mus musculus domesticus produce X-mono-somic females at high frequencies. One strain, Patchy fur, carries an inversion on the X chromosome spanning the pseudoautosomal Xlr3b},
+	author = {Raefski, Adam S. and O'Neill, Michael J.},
+	doi = {10.1038/ng1567},
+	file = {:Users/jack/Downloads/raefski2005.pdf:pdf},
+	isbn = {1061-4036 (Print)$\backslash$r1061-4036 (Linking)},
+	issn = {10614036},
+	journal = {Nature Genetics},
+	number = {6},
+	pages = {620--624},
+	pmid = {15908953},
+	title = {{Identification of a cluster of X-linked imprinted genes in mice}},
+	volume = {37},
+	year = {2005}
+}
+
+@article{Shang2016,
+	abstract = {Recent advances in the genetics of amyotrophic lateral sclerosis (ALS) have provided key mechanistic insights to the pathogenesis of this devastating neurodegenerative disease. Among many etiologies for ALS, the identification of mutations and proteinopathies in two RNA binding proteins, TDP-43 (TARDBP or TAR DNA binding protein 43) and its closely related RNA/DNA binding protein FUS (fused in sarcoma), raises the intriguing possibility that perturbations to the RNA homeostasis and metabolism in neurons may contribute to the pathogenesis of these diseases. Although the similarities between TDP-43 and FUS suggest that mutations and proteinopathy involving these two proteins may converge on the same mechanisms leading to neurodegeneration, there is increasing evidence that FUS mutations target distinct mechanisms to cause early disease onset and aggressive progression of disease. This review focuses on the recent advances on the molecular, cellular and genetic approaches to uncover the mechanisms of wild type and mutant FUS proteins during development and in neurodegeneration. These findings provide important insights to understand how FUS mutations may perturb the maintenance of dendrites through fundamental processes in RNA splicing, RNA transport and DNA damage response/repair. These results contribute to the understanding of phenotypic manifestations in neurodegeneration related to FUS mutations, and to identify important directions for future investigations. This article is part of a Special Issue entitled SI:RNA Metabolism in Disease.},
+	author = {Shang, Yulei and Huang, Eric J.},
+	doi = {10.1016/j.brainres.2016.03.036},
+	file = {:Users/jack/Downloads/Papers/1-s2.0-S0006899316301652-main.pdf:pdf},
+	isbn = {1872-6240 (Electronic)$\backslash$r0006-8993 (Linking)},
+	issn = {18726240},
+	journal = {Brain Research},
+	keywords = {Amyotrophic lateral sclerosis (ALS),DNA damage repair,Frontotemporal dementia (FTD),Fused in sarcoma (FUS),Low complexity domain,Prion-like property,RNA binding protein,RNA splicing},
+	pages = {65--78},
+	pmid = {27033831},
+	publisher = {Elsevier},
+	title = {{Mechanisms of FUS mutations in familial amyotrophic lateral sclerosis}},
+	url = {http://dx.doi.org/10.1016/j.brainres.2016.03.036},
+	volume = {1647},
+	year = {2016}
+}
+
+@article{Koressaar2007,
+	abstract = {UNLABELLED: The determination of annealing temperature is a critical step in PCR design. This parameter is typically derived from the melting temperature of the PCR primers, so for successful PCR work it is important to determine the melting temperature of primer accurately. We introduced several enhancements in the widely used primer design program Primer3. The improvements include a formula for calculating melting temperature and a salt correction formula. Also, the new version can take into account the effects of divalent cations, which are included in most PCR buffers. Another modification enables using lowercase masked template sequences for primer design.$\backslash$n$\backslash$nAVAILABILITY: Features described in this article have been implemented into the development code of Primer3 and will be available in future versions (version 1.1 and newer) of Primer3. Also, a modified version is compiled under the name of mPrimer3 which is distributed independently. The web-based version of mPrimer3 is available at http://bioinfo.ebc.ee/mprimer3/ and the binary code is freely downloadable from the URL http://bioinfo.ebc.ee/download/.},
+	author = {Koressaar, Triinu and Remm, Maido},
+	doi = {10.1093/bioinformatics/btm091},
+	file = {:Users/jack/Downloads/Papers/btm091.pdf:pdf},
+	isbn = {1367-4803},
+	issn = {13674803},
+	journal = {Bioinformatics},
+	number = {10},
+	pages = {1289--1291},
+	pmid = {17379693},
+	title = {{Enhancements and modifications of primer design program Primer3}},
+	volume = {23},
+	year = {2007}
+}
+
 @article{Sun2015a,
 	abstract = {The RNA-binding protein FUS/TLS, mutation in which is causative of the fatal motor neuron disease amyotrophic lateral sclerosis (ALS), is demonstrated to directly bind to the U1-snRNP and SMN complexes. ALS-causative mutations in FUS/TLS are shown to abnormally enhance their interaction with SMN and dysregulate its function, including loss of Gems and altered levels of small nuclear RNAs. The same mutants are found to have reduced association with U1-snRNP. Correspondingly, global RNA analysis reveals a mutant-dependent loss of splicing activity, with ALS-linked mutants failing to reverse changes caused by loss of wild-type FUS/TLS. Furthermore, a common FUS/TLS mutant-associated RNA splicing signature is identified in ALS patient fibroblasts. Taken together, these studies establish potentially converging disease mechanisms in ALS and spinal muscular atrophy, with ALS-causative mutants acquiring properties representing both gain (dysregulation of SMN) and loss (reduced RNA processing mediated by U1-snRNP) of function.},
 	author = {Sun, Shuying and Ling, Shuo-Chien and Qiu, Jinsong and Albuquerque, Claudio P and Zhou, Yu and Tokunaga, Seiya and Li, Hairi and Qiu, Haiyan and Bui, Anh and Yeo, Gene W and Huang, Eric J and Eggan, Kevin and Zhou, Huilin and Fu, Xiang-Dong and Lagier-Tourenne, Clotilde and Cleveland, Don W},
@@ -3043,6 +3094,39 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 	volume = {107},
 	year = {2010}
 }
+
+@article{Gruber2016,
+	abstract = {Alternative polyadenylation (APA) is a general mechanism of transcript diversification in mammals, which has been recently linked to proliferative states and cancer. Different 3′ untranslated region (3′ UTR) isoforms interact with different RNA-binding proteins (RBPs), which modify the stability, translation, and subcellular localization of the corresponding transcripts. Although the heterogeneity of pre-mRNA 3′ end processing has been established with high-throughput approaches, the mechanisms that underlie systematic changes in 3′ UTR lengths remain to be characterized. Through a uniform analysis of a large number of 3′ end sequencing data sets, we have uncovered 18 signals, six of which are novel, whose positioning with respect to pre-mRNA cleavage sites indicates a role in pre-mRNA 3′ end processing in both mouse and human. With 3′ end sequencing we have demonstrated that the heterogeneous ribonucleoprotein C (HNRNPC), which binds the poly(U) motif whose frequency also peaks in the vicinity of polyadenylation (poly(A)) sites, has a genome-wide effect on poly(A) site usage. HNRNPC-regulated 3′ UTRs are enriched in ELAV-like RBP 1 (ELAVL1) binding sites and include those of the CD47 gene, which participate in the recently discovered mechanism of 3′ UTR–dependent protein localization (UDPL). Our study thus establishes an up-to-date, high-confidence catalog of 3′ end processing sites and poly(A) signals, and it uncovers an important role of HNRNPC in regulating 3′ end processing. It further suggests that U-rich elements mediate interactions with multiple RBPs that regulate different stages in a transcript's life cycle.},
+	author = {Gruber, Andreas J. and Schmidt, Ralf and Gruber, Andreas R. and Martin, Georges and Ghosh, Souvik and Belmadani, Manuel and Keller, Walter and Zavolan, Mihaela},
+	doi = {10.1101/gr.202432.115},
+	file = {:Users/jack/Downloads/Papers/Genome Res.-2016-Gruber-gr.202432.115.pdf:pdf},
+	isbn = {1549-5469 (Electronic)
+	1088-9051 (Linking)},
+	issn = {15495469},
+	journal = {Genome Research},
+	number = {8},
+	pages = {1145--1159},
+	pmid = {27382025},
+	title = {{A comprehensive analysis of 3' end sequencing data sets reveals novel polyadenylation signals and the repressive role of heterogeneous ribonucleoprotein C on cleavage and polyadenylation}},
+	volume = {26},
+	year = {2016}
+}
+@article{Reimand2016,
+	abstract = {Functional enrichment analysis is a key step in interpreting gene lists discovered in diverse high-throughput experiments. g:Profiler studies flat and ranked gene lists and finds statistically significant Gene Ontology terms, pathways and other gene function related terms. Translation of hundreds of gene identifiers is another core feature of g:Profiler. Since its first publication in 2007, our web server has become a popular tool of choice among basic and translational researchers. Timeliness is a major advantage of g:Profiler as genome and pathway information is synchronized with the Ensembl database in quarterly updates. g:Profiler supports 213 species including mammals and other vertebrates, plants, insects and fungi. The 2016 update of g:Profiler introduces several novel features. We have added further functional datasets to interpret gene lists, including transcription factor binding site predictions, Mendelian disease annotations, information about protein expression and complexes and gene mappings of human genetic polymorphisms. Besides the interactive web interface, g:Profiler can be accessed in computational pipelines using our R package, Python interface and BioJS component. g:Profiler is freely available at http://biit.cs.ut.ee/gprofiler/. },
+	author = {Reimand, J{\"{u}}ri and Arak, Tambet and Adler, Priit and Kolberg, Liis and Reisberg, Sulev and Peterson, Hedi and Vilo, Jaak},
+	doi = {10.1093/nar/gkw199},
+	file = {:Users/jack/Downloads/Papers/gkw199.pdf:pdf},
+	isbn = {13624962 (Electronic)},
+	issn = {13624962},
+	journal = {Nucleic acids research},
+	number = {W1},
+	pages = {W83--W89},
+	pmid = {27098042},
+	title = {{g:Profiler-a web server for functional interpretation of gene lists (2016 update)}},
+	volume = {44},
+	year = {2016}
+}
+
 @article{Mohagheghi2016,
 	abstract = {The aggregation and mislocalization of RNA-binding proteins leads to the aberrant regulation of RNA metabolism and is a key feature of many neurodegenerative diseases, including amyotrophic lateral sclerosis and frontotemporal dementia. However, the pathological consequences of abnormal deposition of TDP-43 and other RNA-binding proteins remain unclear, as the specific molecular events that drive neurodegeneration have been difficult to identify and continue to be elusive. Here we provide novel insight into the complexity of the RNA-binding protein network by demonstrating that the inclusion of exon 17b in the SORT1 mRNA, a pathologically-relevant splicing event known to be regulated by TDP-43, is also considerably affected by additional RNA-binding proteins, such as hnRNP L, PTB/nPTB and hnRNP A1/A2. Most importantly, the expression of hnRNP A1/A2 and PTB/nPTB is significantly altered in patients with frontotemporal dementia with TDP-43 positive inclusions (FTLD-TDP), indicating that perturbations in RNA metabolism and processing in FTLD-TDP is not exclusively driven by a loss of TDP-43 function. These results also suggest that a comprehensive assessment of the RNA-binding protein network will dramatically advance our current understanding of the role of TDP-43 in disease pathogenesis, as well as enhance both diagnostic and therapeutic capabilities.},
 	annote = {READ ME},
