--- a/thesis_master.tex
+++ b/thesis_master.tex
@@ -34,7 +34,7 @@
 \usepackage{pdfpages} % for adding pdfs in to the appendices
 \usepackage{pdflscape} % for landscape pages
 \usepackage{sidecap} % for side captions
-
+\usepackage{gensymb} % for the degree symbol
 \usepackage{titlesec, blindtext, color}
 \definecolor{gray75}{gray}{0.75}
 \newcommand{\hsp}{\hspace{1pt}}
@@ -47,6 +47,7 @@
 \usepackage[toc,page]{appendix}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
+\usepackage{amsmath} % for equations
 
 \graphicspath{{/Users/Jack/google_drive/Work/PhD_Year_4/Thesis/Figures}} %this is the path to all your figures
 
@@ -61,11 +62,11 @@
 
 % CONTENT
 %\input{Chapters/01_introduction.tex}
-\input{Chapters/02_methods.tex}
+%\input{Chapters/02_methods.tex}
 %\input{Chapters/03_cryptic_exons.tex}
 %\input{Chapters/04_fus_mice.tex}
-\input{Chapters/05_tdp_mice.tex}
-%\input{Chapters/06_fus_meta.tex}
+%\input{Chapters/05_tdp_mice.tex}
+\input{Chapters/06_fus_meta.tex}
 %\input{Chapters/discussion.tex}
 
 % ACKNOWLEGEMENTS
