finished draft of FUS meta; working on methods

--- a/thesis_master.tex
+++ b/thesis_master.tex
@@ -26,7 +26,7 @@
 \renewcommand\cellgape{\Gape[4pt]}
 \usepackage{multirow}
 \usepackage{longtable}
-
+\usepackage{flexisym} % for prime symbols \textprime
 \usepackage{anyfontsize}
 \usepackage{emptypage} % all cleardoublepage are without page numbers
 \lhead{} 
@@ -62,11 +62,11 @@
 
 % CONTENT
 %\input{Chapters/01_introduction.tex}
-%\input{Chapters/02_methods.tex}
+\input{Chapters/02_methods.tex}
 %\input{Chapters/03_cryptic_exons.tex}
 %\input{Chapters/04_fus_mice.tex}
 %\input{Chapters/05_tdp_mice.tex}
-\input{Chapters/06_fus_meta.tex}
+%\input{Chapters/06_fus_meta.tex}
 %\input{Chapters/discussion.tex}
 
 % ACKNOWLEGEMENTS
