--- a/thesis_full.tex
+++ b/thesis_full.tex
@@ -57,6 +57,11 @@
 
 \input{Chapters/00_frontmatter.tex}
 
+% ACKNOWLEGEMENTS
+\clearpage
+\input{Chapters/99_acknowledgements.tex}
+
+
 \pagenumbering{arabic} % Switch to normal numbers
 
 % CONTENT
@@ -65,12 +70,8 @@
 \input{Chapters/03_cryptic_exons.tex}
 \input{Chapters/04_fus_mice.tex}
 \input{Chapters/05_tdp_mice.tex}
-%\input{Chapters/06_fus_meta.tex}
-%\input{Chapters/discussion.tex}
-
-% ACKNOWLEGEMENTS
-\clearpage
-\input{Chapters/99_acknowledgements.tex}
+\input{Chapters/06_fus_meta.tex}
+\input{Chapters/discussion.tex}
 
 
 % BIBLIOGRAPHY
@@ -80,7 +81,7 @@
 
 % APPENDICES!!!
 
-%\input{Chapters/appendices.tex}
+\input{Chapters/appendices.tex}
 
 \cleardoublepage
 \end{document}
