--- a/thesis_master.tex
+++ b/thesis_master.tex
@@ -48,7 +48,7 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \usepackage{amsmath} % for equations
-
+\setlength{\headheight}{12pt}
 \graphicspath{{/Users/Jack/google_drive/Work/PhD_Year_4/Thesis/Figures}} %this is the path to all your figures
 
 
@@ -56,22 +56,22 @@
 \begin{document}
 \setcounter{page}{7}
 
-\input{Chapters/00_frontmatter.tex}
+%\input{Chapters/00_frontmatter.tex}
 
 \pagenumbering{arabic} % Switch to normal numbers
 
 % ACKNOWLEGEMENTS
 \clearpage
-\input{Chapters/99_acknowledgements.tex}
+%\input{Chapters/99_acknowledgements.tex}
 
 % CONTENT
 \input{Chapters/01_introduction.tex}
-\input{Chapters/02_methods.tex}
-\input{Chapters/03_cryptic_exons.tex}
-\input{Chapters/04_fus_mice.tex}
-\input{Chapters/05_tdp_mice.tex}
-\input{Chapters/06_fus_meta.tex}
-\input{Chapters/discussion.tex}
+%\input{Chapters/02_methods.tex}
+%\input{Chapters/03_cryptic_exons.tex}
+%\input{Chapters/04_fus_mice.tex}
+%\input{Chapters/05_tdp_mice.tex}
+%\input{Chapters/06_fus_meta.tex}
+%\input{Chapters/discussion.tex}
 
 
 
